--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,30 @@ nav .burger span {
   background: #000;
 }
 /* Nav End */
+
+/* Header Start */
+header {
+  margin: 6rem;
+}
+
+.main-headings {
+  width: 50%;
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+.primary-headings {
+  width: 50%;
+  margin-top: 3rem;
+  font-size: 1.5rem;
+  line-height: 30px;
+}
+
+.bg-gray {
+  background: rgb(53, 53, 53);
+  color: #fff;
+  padding: 2px 10px;
+  font-weight: bold;
+}
+
+/* Header End */
