Add styles to the footer section and change the backgound color

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,12 @@
 }
 
 body {
-  background-color: #ebeae9;
+  background-color: rgb(144, 195, 200);
   margin: 1rem;
+}
+
+.wrapper-container {
+  background-color: #ebeae9;
 }
 
 html {
@@ -120,3 +124,49 @@ main .img {
 }
 
 /* Section Three End */
+
+/* Footer Start */
+footer {
+  margin-top: 10rem;
+  height: 50vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  background: rgb(144, 195, 200);
+}
+
+footer .logo-container h1 {
+  font-size: 4rem;
+  font-family: "Open Sans", sans-serif;
+  margin-bottom: 20px;
+}
+
+footer .logo-container p {
+  max-width: 400px;
+  font-family: sans-serif;
+  line-height: 25px;
+}
+
+footer .about-company {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .about-company .container {
+  margin-right: 40px;
+  margin-top: 20px;
+}
+
+.about-company .container h1 {
+  margin-bottom: 50px;
+}
+
+.about-company .container p {
+  font-family: sans-serif;
+  margin-bottom: 20px;
+}
+/* Footer End */
