Add styles to the footer section

--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,28 @@ footer .about-company .container {
   margin-bottom: 20px;
 }
 /* Footer End */
+
+/* Responsiveness Start */
+@media screen and (max-width: 740px) {
+  header .main-headings {
+    width: 100%;
+  }
+
+  header .primary-headings {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .section-three .main-headings {
+    width: 100%;
+  }
+
+  .section-three .primary-headings {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+
+  .section-three img {
+    margin: 0;
+  }
+}
+/* Responsiveness End */
